--- a/server/views/pages/log-application/confirm/partials/application-details.njk
+++ b/server/views/pages/log-application/confirm/partials/application-details.njk
@@ -12,7 +12,7 @@
 
 {% if applicationData.type.value === 'add-social-pin-phone-contact' %}
   {% set _ = rows.push({
-    key: { text: "First night centre" },
+    key: { text: "First night or early days centre" },
     value: { text: applicationData.earlyDaysCentre }
   }) %}
 {% endif %}
