adding validation telephone number field

--- a/server/views/pages/applications/change/partials/add-social-pin-phone-contact.njk
+++ b/server/views/pages/applications/change/partials/add-social-pin-phone-contact.njk
@@ -226,6 +226,7 @@
   id: "telephone2",
   name: "telephone2",
   inputmode: "numeric",
+  errorMessage: errors.telephone2,
   value: telephone2,
   spellcheck: false
 }) }}
