Adding cell location and removing Actioned by info

--- a/server/views/pages/applications/action/closed.njk
+++ b/server/views/pages/applications/action/closed.njk
@@ -9,8 +9,8 @@
       rows: [
         { key: { text: "Action" }, value: { text: response.decision } },
         { key: { text: "Reason" }, value: { text: response.reason } },
-        { key: { text: "Actioned by" }, value: { text: response.actionedBy } },
-        { key: { text: "Date" }, value: { text: response.actionedDate } }
+        { key: { text: "Date" }, value: { text: response.actionedDate } },
+        { key: { text: "Location" }, value: { text: response.cellLocation } }
       ]
     }) }}
   </div>
