remove date from log prisoner details

--- a/server/views/pages/applications/view/partials/application-details.njk
+++ b/server/views/pages/applications/view/partials/application-details.njk
@@ -26,7 +26,7 @@
 
 {% set _ = rows.push({
   key: { text: "Date sent" },
-  value: { text: application.requestedDate }
+  value: { text: application.createdDate }
 }) %}
 
 {% if applicationType.value == "add-social-pin-phone-contact" %}
