A small text change

--- a/server/views/pages/applications/view/partials/application-details.njk
+++ b/server/views/pages/applications/view/partials/application-details.njk
@@ -25,7 +25,7 @@
 }) %}
 
 {% set _ = rows.push({
-  key: { text: "Date sent" },
+  key: { text: "Date" },
   value: { text: application.createdDate }
 }) %}
 
