--- a/server/views/pages/log-application/application-details/partials/errors.njk
+++ b/server/views/pages/log-application/application-details/partials/errors.njk
@@ -4,6 +4,10 @@
   {% if errors %}
     {% set errorList = [] %}
 
+    {% if errors.earlyDaysCentre %}
+      {% set errorList = errorList.concat([{ text: errors.earlyDaysCentre.text, href: "#earlyDaysCentre" }]) %}
+    {% endif %}
+    
     {% if errors.Details %}
       {% set errorList = errorList.concat([{ text: errors.Details.text, href: "#details" }]) %}
     {% endif %}
