--- a/server/views/pages/log-application/application-details/partials/add-social-pin-phone-contact.njk
+++ b/server/views/pages/log-application/application-details/partials/add-social-pin-phone-contact.njk
@@ -1,3 +1,27 @@
+{{ govukRadios({
+  classes: "govuk-radios--inline",
+  name: "earlyDaysCentre",
+  fieldset: {
+    legend: {
+      text: "Is this person in the first night or early days centre?",
+      isPageHeading: false,
+      classes: "govuk-fieldset__legend--s"
+    }
+  },
+  items: [
+    {
+      value: "yes",
+      text: "Yes"
+    },
+    {
+      value: "no",
+      text: "No"
+    }
+  ],
+  value: earlyDaysCentre or '',
+  errorMessage: { text: errors.earlyDaysCentre.text } if errors.earlyDaysCentre else undefined
+}) }}
+
 <h2 class="govuk-heading-m">New social contact to add</h2>
 
 {% set dayClass = "govuk-input--width-2" %}
