--- a/server/views/pages/applications.njk
+++ b/server/views/pages/applications.njk
@@ -27,7 +27,7 @@
         <li class="govuk-grid-column-one-third card-group__item">
           <div class="card card--clickable" data-testid="log-new-application">
             <h2 class="govuk-heading-m card__heading">
-              <a class="govuk-link card__link" href="/log/application-type">Log a new application</a>
+              <a class="govuk-link card__link" href="/log/prisoner-details">Log a new application</a>
             </h2>
             <p class="govuk-body card__description">Log a new application to process.</p>
           </div>
