--- a/server/views/pages/log-application/prisoner-details/index.njk
+++ b/server/views/pages/log-application/prisoner-details/index.njk
@@ -17,7 +17,7 @@
   <div class="govuk-body govuk-width-container">
     {{ govukBackLink({
       text: "Back",
-      href: "/log/application-type"
+      href: "/"
     }) }}
 
     <div class="govuk-grid-row">
