fix defaul sorting

--- a/server/views/pages/applications/list/partials/pending.njk
+++ b/server/views/pages/applications/list/partials/pending.njk
@@ -7,7 +7,7 @@
     {% if apps.length %}
       {{ govukTable({
         head: [
-          { text: "Date", attributes: { "aria-sort": "ascending" } },
+          { text: "Date", attributes: { "aria-sort": "descending" } },
           { text: "Application type" },
           { text: "From" },
           { text: "Department" },
