--- a/server/views/pages/log-application/submit/index.njk
+++ b/server/views/pages/log-application/submit/index.njk
@@ -30,7 +30,7 @@
         <a href="/applications/{{ application.requestedBy.username }}/{{ application.id }}">View this application</a>
       </li>
       <li>
-        <a href="/log/application-type">Add another application</a>
+        <a href="/log/prisoner-details">Add another application</a>
       </li>
       <li>
         <a href="/">Return to applications dashboard</a>
