--- a/server/views/pages/log-application/application-details/index.njk
+++ b/server/views/pages/log-application/application-details/index.njk
@@ -18,7 +18,7 @@
   <div class="govuk-body govuk-width-container">
     {{ govukBackLink({
       text: "Back",
-      href: "/log/prisoner-details"
+      href: "/log/application-type"
     }) }}
 
     <div class="govuk-grid-row">
