--- a/server/views/pages/log-application/select-application-type/index.njk
+++ b/server/views/pages/log-application/select-application-type/index.njk
@@ -15,7 +15,7 @@
 
         {{ govukBackLink({
           text: "Back",
-          href: "/"
+          href: "/log/prisoner-details"
         }) }}
         
         {% if errorSummary %}
