fix caption text

--- a/server/views/pages/log-application/prisoner-details/index.njk
+++ b/server/views/pages/log-application/prisoner-details/index.njk
@@ -24,7 +24,7 @@
       <div class="govuk-grid-column-one-half">
         {{ renderErrorSummary(errors) }}
 
-        <span class="govuk-caption-xl">{{ applicationType.name }}</span>
+        <span class="govuk-caption-xl">Log an application</span>
         <h1 class="govuk-heading-xl govuk-!-margin-top-0">Log prisoner details</h1>
 
         <form method="POST" id="log-prisoner-details">
