add legal pin phone app details form

--- a/server/views/pages/log-application/application-details/partials/errors.njk
+++ b/server/views/pages/log-application/application-details/partials/errors.njk
@@ -28,6 +28,10 @@
       {% set errorList = errorList.concat([{ text: errors.lastName.text, href: "#lastName" }]) %}
     {% endif %}
 
+    {% if errors.company %}
+      {% set errorList = errorList.concat([{ text: errors.company.text, href: "#company" }]) %}
+    {% endif %}
+
     {% if errors.dateOfBirthOrAge %}
       {% set errorList = errorList.concat([{ text: errors.dateOfBirthOrAge.text, href: "#dateOfBirthOrAge" }]) %}
     {% endif %}
