fix company values

--- a/server/views/pages/log-application/application-details/partials/add-legal-pin-phone-contact.njk
+++ b/server/views/pages/log-application/application-details/partials/add-legal-pin-phone-contact.njk
@@ -30,8 +30,8 @@
     text: "Company",
     classes: "govuk-label--s"
   },
-  value: lastName,
-  errorMessage: errors.lastName,
+  value: company,
+  errorMessage: errors.company,
   classes: "govuk-!-width-width-full"
 }) }}
 
