Text change and related tests

--- a/server/views/pages/applications/view/partials/prisoner-details.njk
+++ b/server/views/pages/applications/view/partials/prisoner-details.njk
@@ -42,7 +42,7 @@
 }) %}
 
 {% set _ = rows.push({
-  key: { text: "IEP" },
+  key: { text: "Incentive level" },
   value: { text: application.requestedBy.iep }
 }) %}
 
