--- a/server/views/pages/log-application/application-details/index.njk
+++ b/server/views/pages/log-application/application-details/index.njk
@@ -7,6 +7,7 @@
 {% from "govuk/components/select/macro.njk" import govukSelect %}
 {% from "govuk/components/date-input/macro.njk" import govukDateInput %}
 {% from "./partials/errors.njk" import renderErrorSummary %}
+{% from "../../../components/loggingForSamePrisonerBanner/macro.njk" import loggingForSamePrisonerBanner %}
 
 
 {% extends "../../../partials/layout.njk" %}
@@ -20,6 +21,8 @@
       text: "Back",
       href: "/log/department"
     }) }}
+
+    {{ loggingForSamePrisonerBanner(isLoggingForSamePrisoner, prisonerName) }}
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-one-half">
