change legal to official

--- a/server/views/pages/applications/view/partials/add-official-pin-phone-contact.njk
+++ b/server/views/pages/applications/view/partials/add-official-pin-phone-contact.njk
@@ -1,4 +1,4 @@
-{{ appTypeSummaryListHeader("New legal contact to add", application.requestedBy.username, application.id, isClosed) }}
+{{ appTypeSummaryListHeader("New official contact to add", application.requestedBy.username, application.id, isClosed) }}
 
 {% set rows = [] %}
 
