--- a/server/views/pages/log-application/confirm/partials/add-official-pin-phone-contact.njk
+++ b/server/views/pages/log-application/confirm/partials/add-official-pin-phone-contact.njk
@@ -1,4 +1,4 @@
-{{ appTypeSummaryListHeader("New legal contact to add", application.requestedBy.username, application.id, isUpdate) }}
+{{ appTypeSummaryListHeader("New official contact to add", application.requestedBy.username, application.id, isUpdate) }}
 
 {% set rows = [] %}
 
