edit first night centre value

--- a/server/views/pages/applications/list/partials/filter.njk
+++ b/server/views/pages/applications/list/partials/filter.njk
@@ -5,7 +5,7 @@
 
   {%- set filterOptionsHtml %}
     {{ accessibleAutocomplete({
-      label: "Search by prisoner name",
+      label: "Prisoner name or number",
       nonce: cspNonce,
       selectedLabel: filters.selectedPrisonerLabel,
       selectedValue: filters.selectedPrisonerId
