--- a/server/views/pages/applications/view/partials/add-official-pin-phone-contact.njk
+++ b/server/views/pages/applications/view/partials/add-official-pin-phone-contact.njk
@@ -13,8 +13,8 @@
 }) %}
 
 {% set _ = rows.push({
-  key: { text: "Company" },
-  value: { text: application.requests[0].company }
+  key: { text: "Organisation" },
+  value: { text: application.requests[0].organisation }
 }) %}
 
 {% set _ = rows.push({
