--- a/server/views/pages/log-application/application-details/partials/add-official-pin-phone-contact.njk
+++ b/server/views/pages/log-application/application-details/partials/add-official-pin-phone-contact.njk
@@ -24,14 +24,13 @@
 }) }}
 
 {{ govukInput({
-  id: "company",
-  name: "company",
+  id: "organisation",
+  name: "organisation",
   label: {
-    text: "Company",
+    text: "Organisation (optional)",
     classes: "govuk-label--s"
   },
-  value: company,
-  errorMessage: errors.company,
+  value: organisation,
   classes: "govuk-!-width-width-full"
 }) }}
 
