--- a/server/views/pages/log-application/confirm/partials/add-official-pin-phone-contact.njk
+++ b/server/views/pages/log-application/confirm/partials/add-official-pin-phone-contact.njk
@@ -13,8 +13,8 @@
 }) %}
 
 {% set _ = rows.push({
-  key: { text: "Company" },
-  value: { text: applicationData.request.company }
+  key: { text: "Organisation" },
+  value: { text: applicationData.request.organisation }
 }) %}
 
 {% set _ = rows.push({
