--- a/server/views/pages/applications/view/partials/add-official-pin-phone-contact.njk
+++ b/server/views/pages/applications/view/partials/add-official-pin-phone-contact.njk
@@ -1,5 +1,6 @@
 {{ appTypeSummaryListHeader("New official contact to add", application.requestedBy.username, application.id, isClosed) }}
 
+
 {% set rows = [] %}
 
 {% set _ = rows.push({
@@ -14,7 +15,7 @@
 
 {% set _ = rows.push({
   key: { text: "Organisation" },
-  value: { text: application.requests[0].organisation }
+  value: { text: organisation }
 }) %}
 
 {% set _ = rows.push({
