--- a/server/views/pages/applications/action/macro.njk
+++ b/server/views/pages/applications/action/macro.njk
@@ -26,7 +26,7 @@
     {% endif %}
 
     <div class="govuk-summary-list__row">
-      <dt class="govuk-summary-list__key">Date</dt>
+      <dt class="govuk-summary-list__key">Date logged</dt>
       <dd class="govuk-summary-list__value">{{ appLoggedDate }}</dd>
     </div>
 
@@ -69,7 +69,7 @@
     <p class="govuk-body">{{ application.assignedGroup.establishment.name }}</p>
     <p class="govuk-body">{{ todayDate }}</p>
 
-    <h1 class="govuk-heading-m">Your application has been {{ response.decision | lower }}.</h1>
+    <h1 class="govuk-heading-s">Your application has been {{ response.decision | lower }}.</h1>
 
     {{ renderSummaryList(application, response, applicationType, appLoggedDate) }}
 
